Update post new tweet & reply function

--- a/Twitter/Base.lproj/Main.storyboard
+++ b/Twitter/Base.lproj/Main.storyboard
@@ -319,7 +319,7 @@
                             <view hidden="YES" clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VkS-87-9yE">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="32"/>
                                 <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Reply" translatesAutoresizingMaskIntoConstraints="NO" id="icV-fd-bTa">
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="comment" translatesAutoresizingMaskIntoConstraints="NO" id="icV-fd-bTa">
                                         <rect key="frame" x="10" y="10" width="16" height="16"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="16" id="a6G-R5-IPg"/>
@@ -343,17 +343,11 @@
                                     <constraint firstItem="UsL-EV-qDY" firstAttribute="top" secondItem="VkS-87-9yE" secondAttribute="top" constant="10" id="ycf-ME-wQI"/>
                                 </constraints>
                             </view>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="j94-KM-w2D">
-                                <rect key="frame" x="0.0" y="32" width="375" height="523"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="20"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences" autocorrectionType="no"/>
-                            </textView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lcr-ug-2WR">
                                 <rect key="frame" x="0.0" y="555" width="375" height="48"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zlO-9f-zZ9">
-                                        <rect key="frame" x="302" y="5" width="63" height="38"/>
+                                        <rect key="frame" x="312" y="5" width="63" height="38"/>
                                         <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="15"/>
                                         <inset key="contentEdgeInsets" minX="10" minY="10" maxX="10" maxY="10"/>
                                         <state key="normal" title="Tweet">
@@ -363,25 +357,88 @@
                                             <color key="titleColor" red="0.66274509800000003" green="0.72156862749999995" blue="0.74901960779999999" alpha="1" colorSpace="custom" customColorSpace="adobeRGB1998"/>
                                         </state>
                                         <connections>
-                                            <action selector="onTweetButton:" destination="RQG-DQ-9nw" eventType="touchUpInside" id="J0J-c3-aeL"/>
+                                            <action selector="post:" destination="RQG-DQ-9nw" eventType="touchUpInside" id="5p9-5L-uQg"/>
                                         </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="140" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V7m-Rl-KF9">
-                                        <rect key="frame" x="263" y="14" width="29" height="21"/>
+                                        <rect key="frame" x="273" y="14" width="29" height="21"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" red="0.42636984589999999" green="0.6893977523" blue="0.94280797240000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8Pb-af-sPu">
+                                        <rect key="frame" x="0.0" y="4.5" width="40" height="40"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="40" id="Tjy-cg-Q2a"/>
+                                            <constraint firstAttribute="height" constant="40" id="uAi-Pk-OAy"/>
+                                        </constraints>
+                                        <inset key="contentEdgeInsets" minX="10" minY="10" maxX="10" maxY="10"/>
+                                        <state key="normal" image="hashtag">
+                                            <color key="titleColor" red="0.42636984589999999" green="0.6893977523" blue="0.94280797240000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
+                                        <state key="disabled">
+                                            <color key="titleColor" red="0.66274509800000003" green="0.72156862749999995" blue="0.74901960779999999" alpha="1" colorSpace="custom" customColorSpace="adobeRGB1998"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="hash:" destination="RQG-DQ-9nw" eventType="touchUpInside" id="ulC-cH-3tf"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NSD-Ge-tcm">
+                                        <rect key="frame" x="40" y="4.5" width="40" height="40"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="40" id="MYr-nB-ivp"/>
+                                            <constraint firstAttribute="height" constant="40" id="N2U-dd-ESH"/>
+                                        </constraints>
+                                        <inset key="contentEdgeInsets" minX="10" minY="10" maxX="10" maxY="10"/>
+                                        <state key="normal" image="attach">
+                                            <color key="titleColor" red="0.42636984589999999" green="0.6893977523" blue="0.94280797240000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
+                                        <state key="disabled">
+                                            <color key="titleColor" red="0.66274509800000003" green="0.72156862749999995" blue="0.74901960779999999" alpha="1" colorSpace="custom" customColorSpace="adobeRGB1998"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="hash:" destination="RQG-DQ-9nw" eventType="touchUpInside" id="BG6-Vm-8xv"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="84m-ah-90T">
+                                        <rect key="frame" x="80" y="4.5" width="40" height="40"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="40" id="tvp-03-H6a"/>
+                                            <constraint firstAttribute="height" constant="40" id="uk1-GW-WnY"/>
+                                        </constraints>
+                                        <inset key="contentEdgeInsets" minX="10" minY="10" maxX="10" maxY="10"/>
+                                        <state key="normal" image="link">
+                                            <color key="titleColor" red="0.42636984589999999" green="0.6893977523" blue="0.94280797240000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
+                                        <state key="disabled">
+                                            <color key="titleColor" red="0.66274509800000003" green="0.72156862749999995" blue="0.74901960779999999" alpha="1" colorSpace="custom" customColorSpace="adobeRGB1998"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="hash:" destination="RQG-DQ-9nw" eventType="touchUpInside" id="Wgs-oE-azV"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                 <constraints>
                                     <constraint firstItem="zlO-9f-zZ9" firstAttribute="centerY" secondItem="lcr-ug-2WR" secondAttribute="centerY" id="1fA-fZ-2Cc"/>
+                                    <constraint firstItem="NSD-Ge-tcm" firstAttribute="leading" secondItem="8Pb-af-sPu" secondAttribute="trailing" id="G4c-5h-gM4"/>
+                                    <constraint firstItem="8Pb-af-sPu" firstAttribute="centerY" secondItem="lcr-ug-2WR" secondAttribute="centerY" id="GZM-4o-jiF"/>
                                     <constraint firstAttribute="height" constant="48" id="GdK-dy-wb1"/>
-                                    <constraint firstAttribute="trailing" secondItem="zlO-9f-zZ9" secondAttribute="trailing" constant="10" id="Moh-wN-QQP"/>
+                                    <constraint firstAttribute="trailing" secondItem="zlO-9f-zZ9" secondAttribute="trailing" id="Moh-wN-QQP"/>
                                     <constraint firstItem="zlO-9f-zZ9" firstAttribute="leading" secondItem="V7m-Rl-KF9" secondAttribute="trailing" constant="10" id="POh-du-7wx"/>
+                                    <constraint firstItem="8Pb-af-sPu" firstAttribute="leading" secondItem="lcr-ug-2WR" secondAttribute="leading" id="gE4-Tl-qVa"/>
                                     <constraint firstItem="V7m-Rl-KF9" firstAttribute="centerY" secondItem="lcr-ug-2WR" secondAttribute="centerY" id="rz2-QG-tdb"/>
+                                    <constraint firstItem="84m-ah-90T" firstAttribute="centerY" secondItem="lcr-ug-2WR" secondAttribute="centerY" id="ww7-w8-lj4"/>
+                                    <constraint firstItem="84m-ah-90T" firstAttribute="leading" secondItem="NSD-Ge-tcm" secondAttribute="trailing" id="xK1-Z2-mbq"/>
+                                    <constraint firstItem="NSD-Ge-tcm" firstAttribute="centerY" secondItem="lcr-ug-2WR" secondAttribute="centerY" id="xMT-Ls-v7N"/>
                                 </constraints>
                             </view>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="j94-KM-w2D">
+                                <rect key="frame" x="4" y="35" width="375" height="523"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="20"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences" autocorrectionType="no"/>
+                            </textView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -425,6 +482,16 @@
                         </barButtonItem>
                     </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
+                    <connections>
+                        <outlet property="btnAttach" destination="NSD-Ge-tcm" id="3cN-6k-PdM"/>
+                        <outlet property="btnHash" destination="8Pb-af-sPu" id="9hJ-jy-63z"/>
+                        <outlet property="btnLink" destination="84m-ah-90T" id="mVl-By-B1f"/>
+                        <outlet property="btnPost" destination="zlO-9f-zZ9" id="3zK-HV-djZ"/>
+                        <outlet property="consBottom" destination="z3D-vp-Yk7" id="uPQ-ug-Qsq"/>
+                        <outlet property="imgAvatar" destination="tMt-f1-mlq" id="uvU-3o-MGG"/>
+                        <outlet property="lblCountdownChar" destination="V7m-Rl-KF9" id="f4h-u3-YGa"/>
+                        <outlet property="txtContent" destination="j94-KM-w2D" id="MGd-b1-LF1"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="u8X-72-UTn" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -450,11 +517,13 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Reply" width="16" height="16"/>
+        <image name="attach" width="25" height="25"/>
         <image name="cancel" width="24" height="24"/>
         <image name="comment" width="30" height="30"/>
+        <image name="hashtag" width="25" height="25"/>
         <image name="icon" width="263" height="257"/>
         <image name="launch" width="225" height="225"/>
+        <image name="link" width="25" height="25"/>
         <image name="logout" width="28" height="24"/>
         <image name="new" width="28" height="28"/>
         <image name="othersLike" width="28" height="28"/>
